--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+    /* Your default theme */
+    --background: white;
+    --foreground: black;
+  }
+  
+.dark {
+    --background: black;
+    --foreground: rgb(43, 41, 41);
+}
